[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cowthepro"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Leo", email = "Leo@pop.rasberrypi" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Leo/cowthepro#readme"
Issues = "https://github.com/Leo/cowthepro/issues"
Source = "https://github.com/Leo/cowthepro"

[tool.hatch.version]
path = "src/cowthepro/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cowthepro tests}"

[tool.coverage.run]
source_pkgs = ["cowthepro", "tests"]
branch = true
parallel = true
omit = [
  "src/cowthepro/__about__.py",
]

[tool.coverage.paths]
cowthepro = ["src/cowthepro", "*/cowthepro/src/cowthepro"]
tests = ["tests", "*/cowthepro/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
