[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminalthepro"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Leo", email = "Leo@pop.rasberrypi" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Leo/terminalthepro#readme"
Issues = "https://github.com/Leo/terminalthepro/issues"
Source = "https://github.com/Leo/terminalthepro"

[tool.hatch.version]
path = "src/terminalthepro/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/terminalthepro tests}"

[tool.coverage.run]
source_pkgs = ["terminalthepro", "tests"]
branch = true
parallel = true
omit = [
  "src/terminalthepro/__about__.py",
]

[tool.coverage.paths]
terminalthepro = ["src/terminalthepro", "*/terminalthepro/src/terminalthepro"]
tests = ["tests", "*/terminalthepro/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
